Prevent remove button overlap

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -3081,6 +3081,7 @@ img.help_tip {
 				line-height: 26px;
 				display: none;
 				text-decoration: none;
+				position: relative;
 			}
 
 			strong {
